# reinforcement-learning

./: Bandit-Demo.ipynb  Ch2-Bandits.ipynb  Ch3-DynamicProgramming.ipynb  Ch4-DynamicProgramming.ipynb  README.md  pyproject.toml
carrentals/: carrentals.py  test_carrentals.py
gridworld/: world.py
nbandit/: agent.py  bandit.py  run.py
