[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Jack Michaud <jack@lomz.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
jupyterlab = "^3.2.4"
matplotlib = "^3.5.0"
asyncio = "^3.4.3"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
